{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 526,
  "lineage": "7c85875d-db49-d7ec-4f90-4a9266de6d77",
  "resources": [
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-23T02:57:21.268-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amira-gcp-402316/global/firewalls/firewall-ssh",
            "log_config": [],
            "name": "firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
            "priority": 1000,
            "project": "amira-gcp-402316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/firewalls/firewall-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-vm-to-gke",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-23T02:57:21.113-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amira-gcp-402316/global/firewalls/private-vm-to-gke",
            "log_config": [],
            "name": "private-vm-to-gke",
            "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
            "priority": 1000,
            "project": "amira-gcp-402316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/firewalls/private-vm-to-gke",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/amira-gcp-402316/global/networks/amira-vpc",
            "mtu": 0,
            "name": "amira-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "amira-gcp-402316",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc"
          }
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "myrouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-10-23T02:57:34.553-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/amira-gcp-402316/regions/us-east1/routers/amira-router",
            "name": "amira-router",
            "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
            "project": "amira-gcp-402316",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/regions/us-east1/routers/amira-router"
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc",
            "module.mynetwork.google_compute_subnetwork.mysubnet"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "amira-gcp-402316/us-east1/amira-router/amira-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "amira-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "amira-gcp-402316",
            "region": "us-east1",
            "router": "amira-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc",
            "module.mynetwork.google_compute_router.myrouter",
            "module.mynetwork.google_compute_subnetwork.mysubnet"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-23T02:57:21.844-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/amira-gcp-402316/regions/us-east1/subnetworks/vm-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "vm-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amira-gcp-402316",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/regions/us-east1/subnetworks/vm-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-23T02:57:25.886-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/amira-gcp-402316/regions/asia-south1/subnetworks/cluster-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amira-gcp-402316",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/regions/asia-south1/subnetworks/cluster-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/images/last-image-from-vm",
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/zones/us-east1-b/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/amira-gcp-402316/zones/us-east1-b/instances/private-vm",
            "instance_id": "6962457283512761697",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "QqZohCr7o44=",
            "name": "private-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/global/networks/amira-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/regions/us-east1/subnetworks/vm-subnet",
                "subnetwork_project": "amira-gcp-402316"
              }
            ],
            "project": "amira-gcp-402316",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/amira-gcp-402316/zones/us-east1-b/instances/private-vm",
            "service_account": [
              {
                "email": "vm-999sa@amira-gcp-402316.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-vm"
            ],
            "tags_fingerprint": "t0YCq7AySBA=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.myvpc",
            "module.mynetwork.google_compute_subnetwork.mysubnet",
            "module.service-account.google_service_account.sa"
          ]
        }
      ]
    }
  ]
}